Se hicieron modificaciones en los botones y se agregaron enlaces a diferentes sitios web dentro y fuera del blog

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <ul class="container-networks">
             <li class="container-networks__item">
-                <a href="#" class="container-networks__link fimanager flaticon-001-facebook"></a>
+                <a href="https://www.facebook.com/sergiodanilo.perezmartinez/" class="container-networks__link fimanager flaticon-001-facebook"></a>
             </li>
             <li class="container-networks__item">
                 <a href="#" class="container-networks__link fimanager flaticon-002-twitter"></a>
@@ -31,11 +31,13 @@
             </li>
         </ul>
         <div class="container-aboutblog">
-            <figure class="container-logo">
-                <img class="container-logo__img" src="./IMG/Logo-negro.png" alt="Logo del blog">
-            </figure>
+            <a href="./index.html">
+                <figure class="container-logo">
+                    <img class="container-logo__img" src="./IMG/Logo-negro.png" alt="Logo del blog">
+                </figure>
+            </a>
             <div class="container-linkMe">
-                <a class="container-linkMe__link" href="#">Sobre mi</a>
+                <a class="container-linkMe__link" href="./my_profile.html">Sobre mi</a>
             </div>
         </div>
     </header>
@@ -43,7 +45,7 @@
         <section class="container-cover">
             <div class="container-content">
                 <h1 class="container-cover__title">Conoce las novedades y noticias del Mundo Tech</h1>
-                <button class="container-cover__button">Entra ya!</button>
+                <a class="container-cover__button" href="./last_blogposts.html">Entra ya!</a>
             </div>
             <figure class="container-imgcover">
                 <img class="container-imgcover__img" src="./IMG/Cover.png" alt="Cover de robot">
