--- a/last_blogposts.html
+++ b/last_blogposts.html
@@ -15,7 +15,7 @@
     <header class="header">
         <ul class="container-networks">
             <li class="container-networks__item">
-                <a href="#" class="container-networks__link fimanager flaticon-001-facebook"></a>
+                <a href="https://www.facebook.com/sergiodanilo.perezmartinez/" class="container-networks__link fimanager flaticon-001-facebook"></a>
             </li>
             <li class="container-networks__item">
                 <a href="#" class="container-networks__link fimanager flaticon-002-twitter"></a>
@@ -31,11 +31,13 @@
             </li>
         </ul>
         <div class="container-aboutblog">
-            <figure class="container-logo">
-                <img class="container-logo__img" src="./IMG/Logo-negro.png" alt="Logo del blog">
-            </figure>
+            <a href="./index.html">
+                <figure class="container-logo">
+                    <img class="container-logo__img" src="./IMG/Logo-negro.png" alt="Logo del blog">
+                </figure>
+            </a>
             <div class="container-linkMe">
-                <a class="container-linkMe__link" href="#">Sobre mi</a>
+                <a class="container-linkMe__link" href="./my_profile.html">Sobre mi</a>
             </div>
         </div>
     </header>
@@ -49,7 +51,7 @@
                     <div class="container-mainArticleContent">
                         <h2 class="container-articleContent__title">Titulo del Blogpost</h2>
                         <p class="container-articleContent__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam cum voluptate porro a consectetur officiis et nam, vero alias maiores magnam id tempora reiciendis neque aut ex perferendis provident eligendi.</p>
-                        <button class="btn-more">Leer mas</button>
+                        <a class="btn-more" href="./blogpost.html">Leer mas</a>
                     </div>
             </article>
         </section>
@@ -60,37 +62,37 @@
                     <img class="article__img" src="./IMG/post-1.png" alt="">
                     <h3 class="article__title">Titulo del Blogpost</h3>
                     <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, voluptatem sint in veritatis, delectus laborum, maiores necessitatibus modi quidem laudantium dolorum doloribus! Provident, ad similique aperiam iste quam sed ex.</p>
-                    <button class="btn-more">Leer mas</button>
+                    <a class="btn-more" href="./blogpost.html">Leer mas</a>
                 </article>
                 <article class="article">
                     <img class="article__img" src="./IMG/post-2.png" alt="">
                     <h3 class="article__title">Titulo del Blogpost</h3>
                     <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, voluptatem sint in veritatis, delectus laborum, maiores necessitatibus modi quidem laudantium dolorum doloribus! Provident, ad similique aperiam iste quam sed ex.</p>
-                    <button class="btn-more">Leer mas</button>
+                    <a class="btn-more" href="./blogpost.html">Leer mas</a>
                 </article>
                 <article class="article">
                     <img class="article__img" src="./IMG/post-3.png" alt="">
                     <h3 class="article__title">Titulo del Blogpost</h3>
                     <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, voluptatem sint in veritatis, delectus laborum, maiores necessitatibus modi quidem laudantium dolorum doloribus! Provident, ad similique aperiam iste quam sed ex.</p>
-                    <button class="btn-more">Leer mas</button>
+                    <a class="btn-more" href="./blogpost.html">Leer mas</a>
                 </article>
                 <article class="article">
                     <img class="article__img" src="./IMG/post-1.png" alt="">
                     <h3 class="article__title">Titulo del Blogpost</h3>
                     <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, voluptatem sint in veritatis, delectus laborum, maiores necessitatibus modi quidem laudantium dolorum doloribus! Provident, ad similique aperiam iste quam sed ex.</p>
-                    <button class="btn-more">Leer mas</button>
+                    <a class="btn-more" href="./blogpost.html">Leer mas</a>
                 </article>
                 <article class="article">
                     <img class="article__img" src="./IMG/post-2.png" alt="">
                     <h3 class="article__title">Titulo del Blogpost</h3>
                     <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, voluptatem sint in veritatis, delectus laborum, maiores necessitatibus modi quidem laudantium dolorum doloribus! Provident, ad similique aperiam iste quam sed ex.</p>
-                    <button class="btn-more">Leer mas</button>
+                    <a class="btn-more" href="./blogpost.html">Leer mas</a>
                 </article>
                 <article class="article">
                     <img class="article__img" src="./IMG/post-3.png" alt="">
                     <h3 class="article__title">Titulo del Blogpost</h3>
                     <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, voluptatem sint in veritatis, delectus laborum, maiores necessitatibus modi quidem laudantium dolorum doloribus! Provident, ad similique aperiam iste quam sed ex.</p>
-                    <button class="btn-more">Leer mas</button>
+                    <a class="btn-more" href="./blogpost.html">Leer mas</a>
                 </article>
             </div>
         </section>
