--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
     <header class="header">
         <ul class="container-networks">
             <li class="container-networks__item">
-                <a href="#" class="container-networks__link fimanager flaticon-001-facebook"></a>
+                <a href="https://www.facebook.com/sergiodanilo.perezmartinez/" class="container-networks__link fimanager flaticon-001-facebook"></a>
             </li>
             <li class="container-networks__item">
                 <a href="#" class="container-networks__link fimanager flaticon-002-twitter"></a>
@@ -31,11 +31,13 @@
             </li>
         </ul>
         <div class="container-aboutblog">
-            <figure class="container-logo">
-                <img class="container-logo__img" src="./IMG/Logo-negro.png" alt="Logo del blog">
-            </figure>
+            <a href="./index.html">
+                <figure class="container-logo">
+                    <img class="container-logo__img" src="./IMG/Logo-negro.png" alt="Logo del blog">
+                </figure>
+            </a>
             <div class="container-linkMe">
-                <a class="container-linkMe__link" href="#">Sobre mi</a>
+                <a class="container-linkMe__link" href="./my_profile.html">Sobre mi</a>
             </div>
         </div>
     </header>
